@@ -4849,7 +4849,7 @@
                 <para>
                     <itemizedlist>
                         <listitem>
-                            <para>Fixed problem ...</para>
+                            <para>Fixed problem with opening dirs by intviewer</para>
                         </listitem>
                     </itemizedlist>
                 </para>
