@@ -2,6 +2,9 @@
 gnome-commander 1.2.4
 ---------------
 
+Bug fixes:
+ * Fixed problem with opening dirs by intviewer
+
 New features:
  * New or updated translations: bg
 
