@@ -1,3 +1,8 @@
+2006-12-14  Henry Yonathan <henry.yonathan@gmail.com>
+
+	* src/gnome-cmd-file-list.c:
+	Prevent int-viewer from opening dirs
+
 2006-12-12  Stephanos Manos <stefmanos@gmail.com>
 
 	* data/gnome-commander.spec.in:
